<resources>
    <string name="app_name">Mouse DPI Converter</string>

    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>

    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_about">About</string>

    <!-- Strings related to Settings -->
    <string name="pref_header_general">General</string>
    <string name="pref_header_dpi">DPIs</string>
    <string name="pref_category_dpis_title">Available DPIs</string>
    <string name="pref_category_dpis_dialog_title">Available DPIs</string>
    <string name="pref_category_dpis_summary">Choose the DPI list you want to see in the conversion list</string>
    <string name="pref_category_general_summary">Enable or disable data sync</string>
    <string name="pref_category_general_title">Enable Auto Sync</string>
    <string name="cmb_empty_item" />
    <string name="main_label_current_game_configuration">Current game configuration</string>
    <string name="main_cmb_mouse_dpi">Mouse DPI</string>
    <string name="main_edt_game_sensitivity">Game Sensitivity</string>
    <string name="main_label_new_configuration">New configuration</string>
    <string name="main_label_new_dpi">New DPI:</string>
    <string name="main_label_new_game_sensitivity">Game Sensitivity:</string>
    <string name="action_reset">Reset</string>
    <string name="action_share">Share</string>
    <string name="empty_string" />
    <string name="share_title">Share this app!</string>
    <string name="share_subject">Check out this app!</string>
    <string name="share_link">https://play.google.com/store/apps/details?id=com.whatsapp</string>

    <string-array name="settings_multi_select_list_preference_titles">
        <item>400</item>
        <item>800</item>
        <item>1200</item>
        <item>1800</item>
        <item>2400</item>
        <item>3200</item>
        <item>3600</item>
        <item>6400</item>
    </string-array>
    <string-array name="settings_multi_select_list_preference_values">
        <item>400</item>
        <item>800</item>
        <item>1200</item>
        <item>1800</item>
        <item>2400</item>
        <item>3200</item>
        <item>3600</item>
        <item>6400</item>
    </string-array>

    <string-array name="settings_default_multi_select_list_preference_values">
        <item>800</item>
        <item>1200</item>
        <item>2400</item>
    </string-array>
    <!--  ***********  -->
</resources>
