<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="@string/pref_header_general"
        android:key="configs_grupo_general">

        <CheckBoxPreference
            android:key="configs_general"
            android:summary="@string/pref_category_general_summary"
            android:title="@string/pref_category_general_title"
            android:defaultValue="true"/>

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/pref_header_dpi"
        android:key="configs_grupo_dpis">

        <MultiSelectListPreference
            android:dialogTitle="@string/pref_category_dpis_dialog_title"
            android:entries="@array/settings_multi_select_list_preference_titles"
            android:entryValues="@array/settings_multi_select_list_preference_values"
            android:key="configs_dpis"
            android:title="@string/pref_category_dpis_title"
            android:summary="@string/pref_category_dpis_summary"
            android:defaultValue="@array/settings_default_multi_select_list_preference_values"/>

    </PreferenceCategory>

</PreferenceScreen>